src/components/LearningCenterCard/LearningCenterCard.module.css
.container {
    width: 350px;
    padding: 10px;
    border-left: 1px solid lightgray;
}

.usaCardHeader {
    height: 48px;
    padding: 12px 16px 12px 16px;
}

.headerLabel {
    font-family: var(--Font-Primary);
    font-weight: 400;
    color: var(--Brand-Primary-SBA-Blue);
    font-size: 17px;
    letter-spacing: 0;
    line-height: normal;
}

.title {
    color: var(--Brand-Primary-SBA-Blue);
    font-family: var(--Font-Primary);
    font-size: 22px;
    font-weight: 600;
    line-height: 26px;
    word-wrap: break-word;
    flex: 1 1 0;
    margin-bottom: 8px;
}

.description {
    font-family: var(--Font-Primary);
    font-weight: 400;
    color: var(--Base-base-dark);
    font-size: 17px;
    line-height: 22px;
}

.usaCardContainer {
    width: 350px;
    border-radius: 8px;
    border: 1px solid var(--Neutrals-Light-Gray-4);
    background: var(--Base-white);
    margin: unset;
    box-shadow: 0 7px 15px 0 rgba(27, 30, 41, 0.07);
}

.usaCardContainerFour {
    width: 350px;
    border-radius: 8px;
    border: 1px solid var(--Neutrals-Light-Gray-4);
    background: var(--Base-white);
    margin: unset;
    box-shadow: 0 7px 15px 0 rgba(27, 30, 41, 0.07);
    padding-bottom: 20px;
}

.videoTitle {
    text-align: start;
    font-family: var(--Font-Secondary);
    font-size: 17px;
    font-weight: 700;
    width: 195px;
    color: var(--Brand-Primary-SBA-Blue);
}

.videoSubtitle {
    text-align: start;
    font-family: var(--Font-Primary);
    font-size: 15px;
    font-weight: 400;
    font-style: italic;
    width: 195px;
    color: var(--Base-base-dark);
}



.videoContainer {
    padding: 16px;
    line-height: normal;
    border-bottom: 1px solid var(--Base-base-lighter);
}

.viewCourseBtn {
    display: flex;
    align-items: center;
    justify-content: center;
    box-shadow: inset 0 0 0 2px #007DBC;
    color: var(--Brand-Secondary-Bright-Blue);
    text-align: center;
    font-family: var(--Font-Secondary);
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 90%;
}

.viewCourseBtn:active {
    outline: none;
    color: var(--Brand-Secondary-Bright-Blue);
    text-align: center;
    font-family: var(--Font-Secondary);
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 90%;
}

.viewCourseBtn:hover {
    outline: none;
    color: var(--Brand-Secondary-Bright-Blue);
    text-align: center;
    font-family: var(--Font-Secondary);
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 90%;
}

.viewCourseBtn:focus {
    box-shadow: 0 0 0 3px #05FC;
    border-radius: 2px;
    color: var(--Brand-Secondary-Bright-Blue);
    text-align: center;
    font-family: var(--Font-Secondary);
    font-size: 16px;
    font-style: normal;
    font-weight: 700;
    line-height: 90%;
}

.viewCourseText {
    padding-right: 10px;
    color: var(--Brand-Secondary-Bright-Blue);
}

.viewCourseIcon {
    width: 24px;
    height: 24px;
    fill: var(--Brand-Secondary-Bright-Blue);
}

.cardFooter {
    display: flex;
    justify-content: center;
    align-items: center;
}

.headerSbaLogo {
    height: 20px;
    margin-right: 10px;
    padding-right: 10px;
}

.headerLaunchHref {
    text-decoration: none;
    color: unset;
    height: 1em;
    display: inline-block;
}

.contentImage {
    width: 350px;
    height: 358px;
}

.videoRight {
    display: flex;
    width: 24px;
    height: 24px;
    padding: 6px 8px 6px 8px;
    justify-content: center;
    align-items: center;
}

.videoHref {
    background: transparent;
    border: unset;
    width: 100%;
    cursor: pointer;
}

.videoRow {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.videoIcon {
    height: 40px;
    margin-right: 10px;
}

.nextIcon {
    height: 21px;
    margin-left: 10px;
}

.usaCardHeading {
    padding: 0;
}

.titleContainer {
    padding: 16px;
    border-bottom: 1px solid var(--Base-base-lighter);
}

.usaCardFooter {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 16px 20px 16px;
}

@media (max-width: 768px) {
    .grid-row {
        flex-direction: column;
    }

    .grid-col-auto {
        order: 3;
        flex: 0 0 auto;
    }

    .grid-col {
        order: 2;
        flex: 0 0 auto;
    }
}

.launchIcon {
    color: var(--Brand-Primary-SBA-Blue);
    fill: var(--Brand-Primary-SBA-Blue);
}

